<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.FormCreditCardFragment"
    android:padding="30dp"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_credit_card_description"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_credit_card_flag"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/flagCreditCardField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_credit_card_flag"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_credit_card_owner"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ownerCreditCardField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_credit_card_owner"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_credit_card_limit"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/limitCreditCardField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_credit_card_limit"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveCreditCardBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_form_btn2" />
</LinearLayout>