<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BankInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <fragment
        android:id="@+id/fragment2"
        android:name="example.com.finance.views.CurrentBalanceFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        tools:layout="@layout/fragment_current_balance" />

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment2"
        app:layout_constraintVertical_bias="0.083">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_form_name"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bankInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_form_owner"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ownerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_form_agency"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/agencyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />

        <Button
            android:id="@+id/depositBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_deposit" />

        <Button
            android:id="@+id/withdrawBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_withdraw" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>