<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SheetFragment"
    android:padding="15dp"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/drawer_menu_resumes"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_expenses"
        android:textSize="18sp" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/expensesChart"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </com.github.mikephil.charting.charts.PieChart>

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_earnings"
        android:textSize="18sp" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/earningsChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"></com.github.mikephil.charting.charts.PieChart>

</LinearLayout>
</ScrollView>